--- a/css/style.css
+++ b/css/style.css
@@ -8134,7 +8134,7 @@ a.text-dark:hover, a.text-dark:focus {
 
 body {
   font-family: "Poppins", Algerian, sans-serif;
-  background: blue;
+  background: gray;
   font-size: 16px;
   line-height: 1.8;
   font-weight: 400;
